--- a/index.html
+++ b/index.html
@@ -1,75 +1,83 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover" />
+        <meta name="theme-color" content="#000000" />
+        
+        <link href="./imgs/foto_braulio_quine.jpeg" rel="icon" type="image/jpeg"/>
         <link href="style.css" rel="stylesheet" type="text/css">
         <title>CV</title>
     </head>
-
     <body>
-
-        <button onclick="changeColor()"> Repaint!</button>
-
         <div class="basic_info" align="center">
             <h1>Braulio Quiñe Chumpitaz</h1>
-            <img src="/home/brakine/Documents/UTEC/RLE/Proyectos/CV_project/create_CV/imgs/foto_braulio_quine.jpeg" 
-                alt="Profile Picture" width="200" height="200">
-            <p align="left">Email: bqch20@gmail.com</p>
-            <p align="left">Phone: (+51) 987 199 392</p>   
-            <p align="left">Linkedin: <a href="https://www.linkedin.com/in/braulio-qui%C3%B1e-chumpitaz-2bb2a7151/">
-                https://www.linkedin.com/in/braulio-qui%C3%B1e-chumpitaz-2bb2a7151/</a></p>
-            <p align="left">GitHub: <a href="https://github.com/BQC21">
-                https://github.com/BQC21</a></p>
+            <img class="profile_photo" 
+                src="./imgs/foto_braulio_quine.jpeg" 
+                alt="Profile Picture" width="300" height="300">
+            <p>Email: bqch20@gmail.com <br/> 
+                Phone: (+51) 987 199 392 <br/> 
+                Linkedin: <a href="https://www.linkedin.com/in/braulio-qui%C3%B1e-chumpitaz-2bb2a7151/">
+                https://www.linkedin.com/in/braulio-qui%C3%B1e-chumpitaz-2bb2a7151/</a> <br/> 
+                GitHub: <a href="https://github.com/BQC21"> https://github.com/BQC21</a></p>
+        <div class="about_me" align="center">
             <h2>About Me</h2>
-            <p align="left"> Mechatronic engineer with experience in 
-                programming, electronics, and robotics. 
-                Passionate about developing innovative solutions 
-                and continuous learning.
+            <p> Mechatronic engineer with experience in 
+                software engineering and researching projects 
+                with deep learning and computer vision. 
             </p>
+        </div>
+        <div class="projects" align="center">
+            <h2>Projects</h2>
+            <ul align="left">
+                <strong> UNIVERSIDAD DE INGENIERÍA Y TECNOLOGÍA |</strong> April 2025 - December 2025
+                <li>Multimodal decompostion in a neural network architecture to forecast pv power generation
+                    <ul>
+                        <li>Achieved error reduction upper to 20% respecting to the literature review architecture</li>
+                        <li>Increased correlation between desired and predicted outputs for 2 benchmark datasets</li>
+                    </ul>
+                </li>
+                <br/>
+                <strong> ROBOTIC AIR SYSTEMS (RAS) |</strong> February 2024 - July 2024
+                <li>Design a system for a drone autonomous navigation in warehouses 
+                    <ul>
+                        <li>Adapt a new platform for flight control</li>
+                        <li>Implement Isaac ROS Visual SLAM to reconstruct the environment</li>
+                        <li>Implement Nav2 for autonomous navigation and Nvblox for avoiding obstacles</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div class="education" align="center">
             <h2>Education</h2>
             <h3>Bachelor's Degree in Mechatronic Engineering</h3>
-            <p align="left">University: Universidad de ingeniería y tecnología (UTEC)</p>
-            <p align="left">Graduation Year: 2026</p>
+            <p>University: Universidad de ingeniería y tecnología (UTEC) <br/>
+                Graduation Year: 2026</p>
         </div>
         <div class="skills" align="center">
-            <h2>Skills</h2>
+            <h2>Skills & tools</h2>
             <ul align="left">
-                <li>Programming Languages: Python, C/C++, JavaScript</li>
-                <li>Web Development: HTML, CSS, React.js, Node.js</li>
-                <li>Robotics: Robot Operating System (ROS), Arduino</li>
-                <li>Data Analysis: MATLAB, Excel, Pandas</li>
-                <li>Deep Learning: Pytorch, TensorFlow, Keras</li>
-                <li>Database Management: SQL, MongoDB</li>
-                <li>Cloud Platforms: AWS, Google Cloud</li>
-                <li>Computer vision: OpenCV, YOLO</li>
+                <li>Programming Languages: Python, JavaScript, C/C++</li>
+                <li>Full stack Development: HTML, CSS, React.js, Node.js, Flask, SQL, APIs</li>
+                <li>DevOps: Linux, Docker, Kubernetes, Cloud computing</li>
                 <li>Version Control: Git, GitHub</li>
-                <li>Languages: Spanish (Native), English (Fluent)</li>
+                <li>Agile Methodologies: Notion, Jira</li>
+                <li>Data Analytics: Openpyxl, Pandas</li>
+                <li>Deep Learning: Pytorch, TensorFlow, Keras</li>
+                <li>Computer vision: OpenCV, YOLO</li>
+                <li>Robotics: ROS2, Arduino, Jetson</li>
+                <li>Languages: Spanish (Native), English (B2)</li>
             </ul>
         </div>
         <div class="hobbies" align="center">
             <h2>Hobbies</h2>
             <ul align="left">
-                <li>Reading books on technology and innovation</li>
+                <li>Reading about philosophy, personal development and catholicism</li>
                 <li>Sports: calisthenics, running, swimming</li>
                 <li>playing musical instruments: guitar, drums</li>
             </ul>
         </div>
+
+        <!-- <script type = "module" src="app.js"></script> -->
     </body>
-
-    <script>
-        function getRandomColor(){
-            let letters = '0123456789ABCDEF';
-            let color = '#';
-            for (let i = 0; i < 6; i++) {
-            color += letters[Math.floor(Math.random() * 16)];
-            }
-            return color;
-        }
-        function changeColor(){
-            let newColor = getRandomColor();
-            document.body.style.backgroundColor = newColor;
-        }
-    </script>
-
 </html>
