--- a/index.html
+++ b/index.html
@@ -29,23 +29,21 @@
         </div>
         <div class="projects" align="center">
             <h2>Projects</h2>
-            <ul align="left">
-                <strong> UNIVERSIDAD DE INGENIERÍA Y TECNOLOGÍA |</strong> April 2025 - December 2025
-                <li>Multimodal decompostion in a neural network architecture to forecast pv power generation
-                    <ul>
-                        <li>Achieved error reduction upper to 20% respecting to the literature review architecture</li>
-                        <li>Increased correlation between desired and predicted outputs for 2 benchmark datasets</li>
-                    </ul>
-                </li>
-                <br/>
-                <strong> ROBOTIC AIR SYSTEMS (RAS) |</strong> February 2024 - July 2024
-                <li>Design a system for a drone autonomous navigation in warehouses 
-                    <ul>
-                        <li>Adapt a new platform for flight control</li>
-                        <li>Implement Isaac ROS Visual SLAM to reconstruct the environment</li>
-                        <li>Implement Nav2 for autonomous navigation and Nvblox for avoiding obstacles</li>
-                    </ul>
-                </li>
+            <ul align="center">
+                <mark> UNIVERSIDAD DE INGENIERÍA Y TECNOLOGÍA | </mark> <span> 2025 - December 2025 </span> <br/>
+                Multimodal decompostion in a neural network architecture to forecast pv power generation <br/>
+                <ul>
+                    <li>Achieved error reduction upper to 20% respecting to the literature review architecture</li>
+                    <li>Increased correlation between desired and predicted outputs for 2 benchmark datasets</li>
+                </ul>
+                <br/> <br/> <br/>
+                <mark> ROBOTIC AIR SYSTEMS (RAS) | </mark> <span> February 2024 - July 2024 </span> <br/>
+                Design a system for a drone autonomous navigation in warehouses <br/> 
+                <ul>
+                    <li>Adapt a new platform for flight control</li>
+                    <li>Implement Isaac ROS Visual SLAM to reconstruct the environment</li>
+                    <li>Implement Nav2 for autonomous navigation and Nvblox for avoiding obstacles</li>
+                </ul>
             </ul>
         </div>
         <div class="education" align="center">
@@ -56,7 +54,7 @@
         </div>
         <div class="skills" align="center">
             <h2>Skills & tools</h2>
-            <ul align="left">
+            <ul>
                 <li>Programming Languages: Python, JavaScript, C/C++</li>
                 <li>Full stack Development: HTML, CSS, React.js, Node.js, Flask, SQL, APIs</li>
                 <li>DevOps: Linux, Docker, Kubernetes, Cloud computing</li>
@@ -71,7 +69,7 @@
         </div>
         <div class="hobbies" align="center">
             <h2>Hobbies</h2>
-            <ul align="left">
+            <ul>
                 <li>Reading about philosophy, personal development and catholicism</li>
                 <li>Sports: calisthenics, running, swimming</li>
                 <li>playing musical instruments: guitar, drums</li>
